# winebot-contracts

./: README.md  pyproject.toml
.github/workflows/: conformance-dashboard.yaml  conformance-spec.yaml  run-conformance.yaml
api/: openapi.yaml
cli/: idempotency.md  winebotctl.md
docs/: architecture.md  compatibility.md
mcp/: tools.json
schemas/: session.json
scripts/: compile-results.py  generate-dashboard.py
src/winebot_contracts/: __init__.py  broker.py  plugins.py
src/winebot_contracts.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/broker/: test_broker.py
tests/conformance/: __init__.py  conftest.py  pytest.ini  requirements.txt  run_conformance.py  test_automation.py  test_errors.py  test_headers.py  test_health.py  test_idempotency.py  test_input.py  test_lifecycle.py  test_recording.py  test_tracing.py  test_version.py
tests/plugins/: test_plugins.py
